# stickit-api-server

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ecs-params.yml  gitignore  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: CI  CI.yml
app/: backend_pre_start.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: collects.py  login.py  users.py
app/api/utils/: exceptions.py  security.py
app/core/: config.py  jwt.py  upload.py
app/crud/: __init__.py  base.py  crud_collect.py  crud_user.py  utils.py
app/crud/utils/: exceptions.py  utils.py
app/db/: database.py
app/models/: base.py  collect.py  res_msg.py  user.py
app/tests/: conftest.py
app/tests/api/: test_helloworld.py
app/tests/api/api_v1/: test_collects.py  test_users.py
app/tests/core/: test_upload.py
app/tests/crud/: test_collect.py  test_user.py  test_utils.py
app/tests/utils/: user.py  utils.py
conf/: command.py
docker/app/: Dockerfile
docker/db/: Dockerfile
docker/db/mongo/: start.sh
docker/web/: Dockerfile
docker/web/nginx/: nginx.conf  start.sh
