[tool.poetry]
name = "stickit-api-server"
version = "0.0.1"
description = ""
authors = ["CHOI HEE JAE <gmlwo530@gmail.com>"]

packages = [
    { include = "app"},
    { include = "*.py", from = "."},
]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.4"
click = "7.1.2"
dnspython = "2.1.0"
email-validator = "1.1.2"
fastapi = "0.63.0"
h11 = "0.12.0"
idna = "3.1"
mccabe = "0.6.1"
mypy-extensions = "0.4.3"
pathspec = "0.8.1"
pycodestyle = "2.6.0"
pydantic = "1.8"
pyflakes = "2.2.0"
python-multipart = "0.0.5"
regex = "2020.11.13"
six = "1.15.0"
starlette = "0.13.6"
toml = "0.10.2"
typed-ast = "1.4.2"
typing-extensions = "3.7.4.3"
uvicorn = "0.13.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
awscli = "^1.19.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
